--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-carrinhp-contador",
+  "name": "app-carrinho",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -22,10 +22,11 @@
     "@ionic-native/core": "4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
+    "@ionic/pro": "2.0.4",
     "@ionic/storage": "2.2.0",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
